modifying body font size

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   background-color: #7a7a7d;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: #39393A;
-  font-size:small
+  font-size:small;
   line-height: normal;
 }
 
