--- a/style.css
+++ b/style.css
@@ -11,11 +11,13 @@ body {
 h1, h2, h3 {
   font-family: 'Itim', cursive;font-family: 'Itim', cursive;
   font-size:32px;
+  padding: 10px;
 }
 
 a {
   text-decoration: none;
   color:#297373;
+  font-size: 18px;
 }
 
 button:hover {
@@ -96,4 +98,5 @@ ul {
 p {
 text-align: left;
 font-size: 18px;
+padding: 20px;
 }
